# rs_discord_bot

./: Cargo.toml
data/: emotes.json  friday_channel.json  friday_data.json  home_channel.json
src/: main.rs
src/commands/: create_reaction.rs  handler.rs  mod.rs  pardon.rs  react.rs
src/commands/chess/: board_creator.rs  logic.rs  mod.rs
src/commands/music/: play.rs
src/friday/: friday.rs  mod.rs
