[package]
name = "discord_bot"
version = "0.1.0"
authors = ["BlueCore"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version="0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.89"
serde = { version = "1.0.130", features = ["derive"] }
base64 = "0.13.1"
chrono = "0.4.23"
image = "0.24.5"
imageproc = "0.23.0"
rusttype = "0.9.3"
lazy_static = "1.4.0"
